# promptmaster-engine

./: .env.example  .gitignore  CLAUDE.md  app.py  pyproject.toml  supabase_schema.sql
backend/: .env.example  deps.py  main.py  requirements.txt
backend/promptmaster/: __init__.py  audit_findings.py  continuity.py  conversation.py  engine.py  evaluator.py  flow_triggers.py  guidance.py  llm_client.py  long_form.py  modes.py  prompt_builder.py  realigner.py  schemas.py  session_context.py  setup_suggester.py  summaries.py
backend/routers/: _pipeline.py  audit.py  continuation.py  conversation.py  engine.py  long_form.py  meta.py  setup.py
backend/tests/: conftest.py  test_audit_findings.py  test_audit_router.py  test_continuation_router.py  test_continuity.py  test_conversation_prompts.py  test_conversation_router.py  test_engine_summary_wiring.py  test_evaluator_completeness.py  test_evaluator_interpretation.py  test_llm_client_meta.py  test_long_form_prompts.py  test_long_form_router.py  test_rating_signal_in_prompts.py  test_schemas.py  test_setup_router.py  test_setup_suggester.py  test_smoke.py  test_summaries.py
docs/: Engine.md  PromptMaster doc.md  PromptMaster_Engine_Prototype_Brief.md  PromptMaster_Feedback_Emails.docx  V2_UPDATE_SUMMARY.md  ai-ui-generator-prompt.md
frontend/: package-lock.json  package.json  postcss.config.mjs  proxy.ts  vercel.json
frontend/src/app/: page.tsx  (+3 more)
promptmaster/: auth.py  db.py  engine.py  evaluator.py  guidance.py  llm_client.py  modes.py  prompt_builder.py  realigner.py  schemas.py  session_store.py  template_store.py
(+114 files in other folders)
