[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "promptmaster"
version = "0.1.0"
description = "PromptMaster Engine - Structured interaction layer for aligned LLM outputs"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "streamlit>=1.30.0",
    "supabase>=2.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
